--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,9 @@ androidxTracing = "1.1.0"
 androidxUiAutomator = "2.2.0"
 androidxWindowManager = "1.1.0"
 androidxWork = "2.9.0-beta01"
+androidxBiometric = "1.1.0"
+androidxSecurity = "1.1.0-alpha04"
+androidxAppAuth = "1.0.0-alpha02"
 coil = "2.4.0"
 firebaseBom = "32.3.1"
 firebaseCrashlyticsPlugin = "2.9.9"
@@ -59,6 +62,8 @@ chucker = "4.0.0"
 ktor = "2.3.3"
 slf4j = "2.0.7"
 rootbeer = "0.1.0"
+gson = "2.10.1"
+logcat = "0.1"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -87,6 +92,9 @@ androidx-dataStore-core = { group = "androidx.datastore", name = "datastore", ve
 androidx-lifecycle-runtimeCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewModelCompose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 androidx-metrics = { group = "androidx.metrics", name = "metrics-performance", version.ref = "androidxMetrics" }
+androidx-biometric = { group = "androidx.biometric", name = "biometric", version.ref = "androidxBiometric" }
+androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "androidxSecurity" }
+androidx-appAuth = { group = "androidx.security", name = "security-app-authenticator", version.ref = "androidxAppAuth" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
 androidx-navigation-testing = { group = "androidx.navigation", name = "navigation-testing", version.ref = "androidxNavigation" }
 androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "androidxProfileinstaller" }
@@ -140,6 +148,8 @@ ktor-android = { group = "io.ktor", name = "ktor-client-android", version.ref = 
 ktor-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
 slf4j = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
 rootbeer = { group = "com.scottyab", name = "rootbeer-lib", version.ref = "rootbeer" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+logcat = { group = "com.squareup.logcat", name = "logcat", version.ref = "logcat" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
