--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,10 +2,10 @@
 accompanist = "0.30.1"
 androidDesugarJdkLibs = "2.0.3"
 androidGradlePlugin = "8.1.1"
-androidxActivity = "1.8.0-beta01"
+androidxActivity = "1.8.0-rc01"
 androidxAppCompat = "1.6.1"
 androidxBrowser = "1.6.0"
-androidxComposeBom = "2023.09.00"
+androidxComposeBom = "2023.09.02"
 androidxComposeCompiler = "1.5.0"
 androidxComposeRuntimeTracing = "1.0.0-alpha04"
 androidxCore = "1.12.0"
@@ -13,9 +13,9 @@ androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.1"
 androidxLifecycle = "2.6.2"
-androidxMacroBenchmark = "1.2.0-beta05"
+androidxMacroBenchmark = "1.2.0-rc01"
 androidxMetrics = "1.0.0-alpha04"
-androidxNavigation = "2.7.2"
+androidxNavigation = "2.7.3"
 androidxProfileinstaller = "1.3.1"
 androidxStartup = "1.1.1"
 androidxTestCore = "1.5.0"
@@ -42,7 +42,7 @@ kotlinxCoroutines = "1.7.3"
 kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.6.0"
 ksp = "1.9.0-1.0.13"
-lint = "31.1.1"
+lint = "31.1.2"
 okhttp = "4.11.0"
 protobuf = "3.24.0"
 protobufPlugin = "0.9.4"
