--- a/login-feature/src/main/AndroidManifest.xml
+++ b/login-feature/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ /*
   ~  * Copyright (c) 2023 European Commission
   ~  *
@@ -17,6 +16,4 @@
   ~  */
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-</manifest>
+<manifest />
