--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,7 +55,7 @@ koin = "3.5.0"
 koinAnnotations = "1.3.0"
 org-jetbrains-kotlin-android = "1.9.0"
 junit = "1.1.5"
-material = "1.9.0"
+material = "1.10.0"
 mockito = "5.4.0"
 mockitoKotlin = "5.0.0"
 mockitoInline = "5.2.0"
@@ -65,6 +65,7 @@ slf4j = "2.0.7"
 rootbeer = "0.1.0"
 gson = "2.10.1"
 logcat = "0.1"
+googlePhoneNumber = "8.13.9"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -153,6 +154,7 @@ rootbeer = { group = "com.scottyab", name = "rootbeer-lib", version.ref = "rootb
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 logcat = { group = "com.squareup.logcat", name = "logcat", version.ref = "logcat" }
 okhttp-mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "okhttp" }
+google-phonenumber = { group = "com.googlecode.libphonenumber", name = "libphonenumber", version.ref = "googlePhoneNumber" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
