--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 accompanist = "0.30.1"
 androidDesugarJdkLibs = "2.0.3"
-androidGradlePlugin = "8.1.1"
-androidxActivity = "1.8.0-rc01"
+androidGradlePlugin = "8.1.2"
+androidxActivity = "1.8.0"
 androidxAppCompat = "1.6.1"
 androidxBrowser = "1.6.0"
-androidxComposeBom = "2023.09.02"
+androidxComposeBom = "2023.10.00"
 androidxComposeCompiler = "1.5.3"
 androidxComposeRuntimeTracing = "1.0.0-alpha04"
 androidxCore = "1.12.0"
@@ -13,9 +13,9 @@ androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.1"
 androidxLifecycle = "2.6.2"
-androidxMacroBenchmark = "1.2.0-rc01"
+androidxMacroBenchmark = "1.2.0-rc02"
 androidxMetrics = "1.0.0-alpha04"
-androidxNavigation = "2.7.3"
+androidxNavigation = "2.7.4"
 androidxProfileinstaller = "1.3.1"
 androidxStartup = "1.1.1"
 androidxTestCore = "1.5.0"
