--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-accompanist = "0.30.1"
+accompanist = "0.32.0"
 androidDesugarJdkLibs = "2.0.3"
 androidGradlePlugin = "8.1.2"
 androidxActivity = "1.8.0"
 androidxAppCompat = "1.6.1"
 androidxBrowser = "1.6.0"
-androidxComposeBom = "2023.10.00"
+androidxComposeBom = "2023.10.01"
 androidxComposeCompiler = "1.5.3"
 androidxComposeRuntimeTracing = "1.0.0-alpha04"
 androidxCore = "1.12.0"
@@ -13,7 +13,7 @@ androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.1"
 androidxLifecycle = "2.6.2"
-androidxMacroBenchmark = "1.2.0-rc02"
+androidxMacroBenchmark = "1.2.0"
 androidxMetrics = "1.0.0-alpha04"
 androidxNavigation = "2.7.4"
 androidxProfileinstaller = "1.3.1"
@@ -26,13 +26,13 @@ androidxTestOrchestrator = "1.1.5"
 androidxTracing = "1.1.0"
 androidxUiAutomator = "2.2.0"
 androidxWindowManager = "1.1.0"
-androidxWork = "2.9.0-beta01"
+androidxWork = "2.9.0-rc01"
 androidxBiometric = "1.1.0"
 androidxSecurity = "1.1.0-alpha06"
 androidxAppAuth = "1.0.0-alpha02"
 coil = "2.4.0"
 constraintlayoutVersion = "1.0.1"
-firebaseBom = "32.3.1"
+firebaseBom = "32.4.0"
 firebaseCrashlyticsPlugin = "2.9.9"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.3.14"
@@ -44,7 +44,7 @@ kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.6.0"
 ksp = "1.9.10-1.0.13"
 lint = "31.1.2"
-okhttp = "4.11.0"
+okhttp = "4.12.0"
 protobuf = "3.24.0"
 protobufPlugin = "0.9.4"
 retrofit = "2.9.0"
@@ -56,8 +56,8 @@ koinAnnotations = "1.3.0"
 org-jetbrains-kotlin-android = "1.9.0"
 junit = "1.1.5"
 material = "1.10.0"
-mockito = "5.4.0"
-mockitoKotlin = "5.0.0"
+mockito = "5.6.0"
+mockitoKotlin = "5.1.0"
 mockitoInline = "5.2.0"
 chucker = "4.0.0"
 ktor = "2.3.3"
@@ -65,7 +65,7 @@ slf4j = "2.0.7"
 rootbeer = "0.1.0"
 gson = "2.10.1"
 logcat = "0.1"
-googlePhoneNumber = "8.13.9"
+googlePhoneNumber = "8.13.23"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
