--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -66,6 +66,7 @@ rootbeer = "0.1.0"
 gson = "2.10.1"
 logcat = "0.1"
 googlePhoneNumber = "8.13.23"
+zxing = "3.5.2"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -155,6 +156,7 @@ gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 logcat = { group = "com.squareup.logcat", name = "logcat", version.ref = "logcat" }
 okhttp-mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "okhttp" }
 google-phonenumber = { group = "com.googlecode.libphonenumber", name = "libphonenumber", version.ref = "googlePhoneNumber" }
+zxing = { group = "com.google.zxing", name = "core", version.ref = "zxing" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
