--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
 accompanist = "0.32.0"
 androidDesugarJdkLibs = "2.0.4"
-androidGradlePlugin = "8.1.4"
-androidxActivity = "1.8.0"
+androidGradlePlugin = "8.2.0"
+androidxActivity = "1.8.1"
 androidxAppCompat = "1.6.1"
-androidxBrowser = "1.6.0"
+androidxBrowser = "1.7.0"
 androidxComposeBom = "2023.10.01"
 androidxComposeCompiler = "1.5.3"
-androidxComposeRuntimeTracing = "1.0.0-alpha04"
+androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.12.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.1"
 androidxLifecycle = "2.6.2"
-androidxMacroBenchmark = "1.2.0"
+androidxMacroBenchmark = "1.2.1"
 androidxMetrics = "1.0.0-alpha04"
 androidxNavigation = "2.7.5"
 androidxProfileinstaller = "1.3.1"
@@ -23,27 +23,27 @@ androidxTestExt = "1.1.5"
 androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.2"
 androidxTestOrchestrator = "1.1.5"
-androidxTracing = "1.1.0"
+androidxTracing = "1.2.0"
 androidxUiAutomator = "2.2.0"
-androidxWindowManager = "1.1.0"
-androidxWork = "2.9.0-rc01"
+androidxWindowManager = "1.2.0"
+androidxWork = "2.9.0"
 androidxBiometric = "1.1.0"
 androidxSecurity = "1.1.0-alpha06"
 androidxAppAuth = "1.0.0-alpha02"
 coil = "2.4.0"
 constraintlayoutVersion = "1.0.1"
-firebaseBom = "32.5.0"
+firebaseBom = "32.6.0"
 firebaseCrashlyticsPlugin = "2.9.9"
 firebasePerfPlugin = "1.4.2"
-gmsPlugin = "4.3.14"
+gmsPlugin = "4.4.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
 kotlin = "1.9.10"
 kotlinxCoroutines = "1.7.3"
 kotlinxDatetime = "0.4.0"
-kotlinxSerializationJson = "1.6.0"
+kotlinxSerializationJson = "1.6.1"
 ksp = "1.9.10-1.0.13"
-lint = "31.1.3"
+lint = "31.2.0"
 okhttp = "4.12.0"
 protobuf = "3.24.0"
 protobufPlugin = "0.9.4"
