Proguard rules revamp, gradle flavor changes, deployment pipeline with fastlane

--- a/version.properties
+++ b/version.properties
@@ -14,9 +14,5 @@
 # governing permissions and limitations under the Licence.
 #
 
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-android.useAndroidX=true
-kotlin.code.style=official
-android.nonTransitiveRClass=true
-android.enableR8.fullMode=false
+#Mon Oct 25 16:49:09 EEST 2021
 VERSION_NAME=0.0.1
