--- a/assembly-logic/src/main/AndroidManifest.xml
+++ b/assembly-logic/src/main/AndroidManifest.xml
@@ -101,9 +101,14 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="mdoc-openid4vp" android:host="*" />
+
+                <data
+                    android:host="${deepLinkHost}"
+                    android:scheme="${openid4vpScheme}" />
+
             </intent-filter>
         </activity>
 
