--- a/version.properties
+++ b/version.properties
@@ -13,4 +13,4 @@
 # ANY KIND, either express or implied. See the Licence for the specific language
 # governing permissions and limitations under the Licence.
 #
-VERSION_NAME=2024.02.1-dev
+VERSION_NAME=2024.02.1
