--- a/assembly-logic/src/main/AndroidManifest.xml
+++ b/assembly-logic/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         tools:targetApi="34">
 
         <service
-            android:name=".service.NfcEngagementServiceImpl"
+            android:name="eu.europa.ec.eudi.wallet.util.DefaultNfcEngagementService"
             android:exported="true"
             android:label="@string/nfc_engagement_service_desc"
             android:permission="android.permission.BIND_NFC_SERVICE">
