Reworked build system to avoid duplication of manifest place holders and versioning, everything now should be handled inside convention plugins

--- a/assembly-logic/src/main/AndroidManifest.xml
+++ b/assembly-logic/src/main/AndroidManifest.xml
@@ -108,7 +108,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="${deepLinkHost}"
+                    android:host="${openid4vpHost}"
                     android:scheme="${openid4vpScheme}" />
 
             </intent-filter>
