--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ androidGradlePlugin = "8.2.2"
 androidxActivity = "1.8.2"
 androidxAppCompat = "1.6.1"
 androidxBrowser = "1.7.0"
-androidxComposeBom = "2024.01.00"
+androidxComposeBom = "2024.02.01"
 androidxComposeCompiler = "1.5.3"
 androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.12.0"
@@ -15,7 +15,7 @@ androidxEspresso = "3.5.1"
 androidxLifecycle = "2.7.0"
 androidxMacroBenchmark = "1.2.3"
 androidxMetrics = "1.0.0-beta01"
-androidxNavigation = "2.7.6"
+androidxNavigation = "2.7.7"
 androidxProfileinstaller = "1.3.1"
 androidxStartup = "1.1.1"
 androidxTestCore = "1.5.0"
@@ -24,7 +24,7 @@ androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.2"
 androidxTestOrchestrator = "1.1.5"
 androidxTracing = "1.2.0"
-androidxUiAutomator = "2.2.0"
+androidxUiAutomator = "2.3.0"
 androidxWindowManager = "1.2.0"
 androidxWork = "2.9.0"
 androidxBiometric = "1.1.0"
@@ -32,11 +32,10 @@ androidxSecurity = "1.1.0-alpha06"
 androidxAppAuth = "1.0.0-alpha03"
 coil = "2.5.0"
 constraintlayoutVersion = "1.0.1"
-firebaseBom = "32.7.1"
+firebaseBom = "32.7.2"
 firebaseCrashlyticsPlugin = "2.9.9"
 firebasePerfPlugin = "1.4.2"
-gmsPlugin = "4.4.0"
-jacoco = "0.8.7"
+gmsPlugin = "4.4.1"
 junit4 = "4.13.2"
 kotlin = "1.9.10"
 kotlinxCoroutines = "1.7.3"
@@ -60,7 +59,7 @@ mockito = "5.8.0"
 mockitoKotlin = "5.2.1"
 mockitoInline = "5.2.0"
 chucker = "4.0.0"
-ktor = "2.3.6"
+ktor = "2.3.7"
 slf4j = "2.0.7"
 rootbeer = "0.1.0"
 gson = "2.10.1"
@@ -71,9 +70,10 @@ eudiWalletCore = "0.5.1-SNAPSHOT"
 cborTree = "0.01.02"
 cameraCore = "1.3.1"
 owaspDependencyCheck = "9.0.9"
-material3 = "1.2.0-rc01"
+material3 = "1.2.0"
 workTesting = "2.9.0"
 appCenter = "5.0.4"
+kover = "0.7.5"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -199,3 +199,4 @@ protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secrets" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 owasp-dependencycheck = { id = "org.owasp.dependencycheck", version.ref = "owaspDependencyCheck" }
+kotlinx-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
