--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 accompanist = "0.34.0"
 androidDesugarJdkLibs = "2.0.4"
-androidGradlePlugin = "8.3.0"
+androidGradlePlugin = "8.3.1"
 androidxActivity = "1.8.2"
 androidxAppCompat = "1.6.1"
-androidxBrowser = "1.7.0"
-androidxComposeBom = "2024.02.01"
+androidxBrowser = "1.8.0"
+androidxComposeBom = "2024.02.02"
 androidxComposeCompiler = "1.5.3"
 androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.12.0"
@@ -29,10 +29,10 @@ androidxWindowManager = "1.2.0"
 androidxWork = "2.9.0"
 androidxBiometric = "1.1.0"
 androidxSecurity = "1.1.0-alpha06"
-androidxAppAuth = "1.0.0-alpha03"
+androidxAppAuth = "1.0.0-beta01"
 coil = "2.5.0"
 constraintlayoutVersion = "1.0.1"
-firebaseBom = "32.7.3"
+firebaseBom = "32.7.4"
 firebaseCrashlyticsPlugin = "2.9.9"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.4.1"
@@ -42,7 +42,7 @@ kotlinxCoroutines = "1.8.0"
 kotlinxDatetime = "0.4.1"
 kotlinxSerializationJson = "1.6.1"
 ksp = "1.9.10-1.0.13"
-lint = "31.3.0"
+lint = "31.3.1"
 okhttp = "4.12.0"
 protobuf = "3.24.0"
 protobufPlugin = "0.9.4"
@@ -68,9 +68,9 @@ googlePhoneNumber = "8.13.31"
 zxing = "3.5.2"
 eudiWalletCore = "0.5.1-SNAPSHOT"
 cborTree = "0.01.02"
-cameraCore = "1.3.1"
+cameraCore = "1.3.2"
 owaspDependencyCheck = "9.0.9"
-material3 = "1.2.0"
+material3 = "1.2.1"
 workTesting = "2.9.0"
 appCenter = "5.0.4"
 kover = "0.7.5"
