--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 accompanist = "0.34.0"
 androidDesugarJdkLibs = "2.0.4"
-androidGradlePlugin = "8.3.1"
+androidGradlePlugin = "8.3.2"
 androidxActivity = "1.8.2"
 androidxAppCompat = "1.6.1"
 androidxBrowser = "1.8.0"
 androidxComposeBom = "2024.04.00"
-androidxComposeCompiler = "1.5.3"
+androidxComposeCompiler = "1.5.11"
 androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.12.0"
 androidxCoreSplashscreen = "1.0.1"
@@ -27,7 +27,7 @@ androidxTracing = "1.2.0"
 androidxUiAutomator = "2.3.0"
 androidxWindowManager = "1.2.0"
 androidxWork = "2.9.0"
-androidxBiometric = "1.1.0"
+androidxBiometric = "1.2.0-alpha05"
 androidxSecurity = "1.1.0-alpha06"
 androidxAppAuth = "1.0.0-beta01"
 coil = "2.5.0"
@@ -37,12 +37,12 @@ firebaseCrashlyticsPlugin = "2.9.9"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.4.1"
 junit4 = "4.13.2"
-kotlin = "1.9.10"
+kotlin = "1.9.23"
 kotlinxCoroutines = "1.8.0"
 kotlinxDatetime = "0.4.1"
 kotlinxSerializationJson = "1.6.1"
 ksp = "1.9.10-1.0.13"
-lint = "31.3.1"
+lint = "31.3.2"
 okhttp = "4.12.0"
 protobuf = "3.24.0"
 protobufPlugin = "0.9.4"
@@ -52,7 +52,7 @@ secrets = "2.0.1"
 turbine = "1.0.0"
 koin = "3.5.0"
 koinAnnotations = "1.3.0"
-org-jetbrains-kotlin-android = "1.9.10"
+org-jetbrains-kotlin-android = "1.9.23"
 junit = "1.1.5"
 material = "1.11.0"
 mockito = "5.10.0"
@@ -105,7 +105,7 @@ androidx-dataStore-core = { group = "androidx.datastore", name = "datastore", ve
 androidx-lifecycle-runtimeCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewModelCompose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 androidx-metrics = { group = "androidx.metrics", name = "metrics-performance", version.ref = "androidxMetrics" }
-androidx-biometric = { group = "androidx.biometric", name = "biometric", version.ref = "androidxBiometric" }
+androidx-biometric = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "androidxBiometric" }
 androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "androidxSecurity" }
 androidx-appAuth = { group = "androidx.security", name = "security-app-authenticator", version.ref = "androidxAppAuth" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
