--- a/.github/workflows/dependencycheck.yml
+++ b/.github/workflows/dependencycheck.yml
@@ -2,7 +2,7 @@ name: SCA - Dependency Check Caller
 on:
   push:
     branches-ignore:
-      - 'dependabot/*'
+      - 'dependabot/**'
   workflow_dispatch:
 
 jobs:
