--- a/assembly-logic/src/main/AndroidManifest.xml
+++ b/assembly-logic/src/main/AndroidManifest.xml
@@ -141,8 +141,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="${openid4vciHost}"
-                    android:scheme="${openid4vciScheme}" />
+                    android:host="${credentialOfferHost}"
+                    android:scheme="${credentialOfferScheme}" />
 
             </intent-filter>
             <intent-filter>
