--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,7 @@ build/
 # Local configuration file (sdk path, etc)
 local.properties
 
-# Eclipse project files
-.classpath
-.project
-
-# Windows thumbnail db
+# Mac thumbnail db
 .DS_Store
 
 # IDEA/Android Studio project files, because
