--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ build/
 # Local configuration file (sdk path, etc)
 local.properties
 
+# Eclipse project files
+.classpath
+.project
+
 # Mac thumbnail db
 .DS_Store
 
