--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,6 +63,7 @@ logcat = "0.1"
 googlePhoneNumber = "8.13.36"
 zxing = "3.5.2"
 eudiWalletCore = "0.9.2-SNAPSHOT"
+cborTree = "0.01.02"
 cameraCore = "1.3.3"
 owaspDependencyCheck = "9.0.9"
 material3 = "1.2.1"
@@ -154,6 +155,7 @@ okhttp-mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver",
 google-phonenumber = { group = "com.googlecode.libphonenumber", name = "libphonenumber", version.ref = "googlePhoneNumber" }
 zxing = { group = "com.google.zxing", name = "core", version.ref = "zxing" }
 eudi-wallet-core = { group = "eu.europa.ec.eudi", name = "eudi-lib-android-wallet-core", version.ref = "eudiWalletCore" }
+cbor-tree = { group = "com.google.iot.cbor", name = "cbor", version.ref = "cborTree" }
 appcenter-analytics = { group = "com.microsoft.appcenter", name = "appcenter-analytics", version.ref = "appCenter" }
 appcenter-crashes = { group = "com.microsoft.appcenter", name = "appcenter-crashes", version.ref = "appCenter" }
 appcenter-distribute = { group = "com.microsoft.appcenter", name = "appcenter-distribute", version.ref = "appCenter" }
