New Logs mechanism with persistence storage cachinc and runtime logging, Implementation for logs retrieval throught the dashboard modal.

--- a/assembly-logic/src/main/AndroidManifest.xml
+++ b/assembly-logic/src/main/AndroidManifest.xml
@@ -64,6 +64,16 @@
         android:theme="@style/Theme.EUDIWallet"
         tools:targetApi="34">
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
         <service
             android:name="eu.europa.ec.eudi.wallet.util.DefaultNfcEngagementService"
             android:exported="true"
