Dependencies update, Kotlin 2 support, new compose and compose plugin.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,20 @@
 [versions]
 accompanist = "0.34.0"
-androidDesugarJdkLibs = "2.1.1"
+androidDesugarJdkLibs = "2.1.2"
 androidGradlePlugin = "8.6.0"
-androidxActivity = "1.9.1"
+androidxActivity = "1.9.2"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxComposeBom = "2024.08.00"
-androidxComposeCompiler = "1.5.11"
+androidxComposeBom = "2024.09.01"
 androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.13.1"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.1.1"
 androidxEspresso = "3.6.1"
-androidxLifecycle = "2.8.4"
+androidxLifecycle = "2.8.5"
 androidxMacroBenchmark = "1.3.0"
 androidxMetrics = "1.0.0-beta01"
-androidxNavigation = "2.7.7"
+androidxNavigation = "2.8.0"
 androidxProfileinstaller = "1.3.1"
 androidxTestCore = "1.6.1"
 androidxTestExt = "1.2.1"
@@ -33,11 +32,11 @@ coil = "2.6.0"
 constraintlayoutVersion = "1.0.1"
 gmsPlugin = "4.4.2"
 junit4 = "4.13.2"
-kotlin = "1.9.23"
+kotlin = "2.0.10"
 kotlinxCoroutines = "1.8.1"
 kotlinxDatetime = "0.4.1"
-kotlinxSerializationJson = "1.6.1"
-ksp = "1.9.23-1.0.20"
+kotlinxSerializationJson = "1.6.3"
+ksp = "2.0.10-1.0.24"
 lint = "31.6.0"
 okhttp = "4.12.0"
 protobuf = "3.24.0"
@@ -48,7 +47,6 @@ secrets = "2.0.1"
 turbine = "1.1.0"
 koin = "3.5.0"
 koinAnnotations = "1.3.0"
-org-jetbrains-kotlin-android = "1.9.23"
 material = "1.12.0"
 mockito = "5.12.0"
 mockitoKotlin = "5.3.1"
@@ -62,8 +60,7 @@ eudiWalletCore = "0.11.1-SNAPSHOT"
 cborTree = "0.01.02"
 cameraCore = "1.3.4"
 owaspDependencyCheck = "10.0.3"
-material3 = "1.2.1"
-workTesting = "2.9.0"
+material3 = "1.3.0"
 appCenter = "5.0.4"
 kover = "0.7.5"
 sonar = "5.0.0.4638"
@@ -182,7 +179,8 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secrets" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 owasp-dependencycheck = { id = "org.owasp.dependencycheck", version.ref = "owaspDependencyCheck" }
 kotlinx-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 sonar = { id = "org.sonarqube", version.ref = "sonar" }
