core integration. Authentication flow

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,7 +56,7 @@ slf4j = "2.0.7"
 gson = "2.11.0"
 googlePhoneNumber = "8.13.40"
 zxing = "3.5.2"
-eudiWalletCore = "0.11.1-SNAPSHOT"
+eudiWalletCore = "0.12.1"
 cborTree = "0.01.02"
 cameraCore = "1.4.0"
 owaspDependencyCheck = "10.0.3"
