--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,7 +56,7 @@ slf4j = "2.0.7"
 gson = "2.11.0"
 googlePhoneNumber = "8.13.40"
 zxing = "3.5.3"
-eudiWalletCore = "0.14.0"
+eudiWalletCore = "0.15.0-SNAPSHOT"
 cborTree = "0.01.02"
 cameraCore = "1.4.1"
 owaspDependencyCheck = "10.0.3"
