--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,14 +5,14 @@ androidGradlePlugin = "8.9.1"
 androidxActivity = "1.10.1"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxComposeBom = "2025.03.00"
+androidxComposeBom = "2025.03.01"
 androidxComposeRuntimeTracing = "1.7.8"
 androidxCore = "1.15.0"
 androidxCoreSplashscreen = "1.0.1"
-androidxDataStore = "1.1.3"
+androidxDataStore = "1.1.4"
 androidxEspresso = "3.6.1"
 androidxLifecycle = "2.8.7"
-androidxMacroBenchmark = "1.3.3"
+androidxMacroBenchmark = "1.3.4"
 androidxMetrics = "1.0.0-beta02"
 androidxNavigation = "2.8.9"
 androidxProfileinstaller = "1.4.1"
@@ -34,7 +34,7 @@ gmsPlugin = "4.4.2"
 junit4 = "4.13.2"
 kotlin = "2.0.21"
 kotlinxCoroutines = "1.9.0"
-kotlinxDatetime = "0.6.0"
+kotlinxDatetime = "0.6.1"
 kotlinxSerializationJson = "1.7.3"
 ksp = "2.0.21-1.0.27"
 lint = "31.9.1"
@@ -57,15 +57,15 @@ gson = "2.11.0"
 googlePhoneNumber = "8.13.40"
 zxing = "3.5.3"
 eudiWalletCore = "0.15.1"
-cameraCore = "1.4.1"
+cameraCore = "1.4.2"
 owaspDependencyCheck = "12.1.0"
 material3 = "1.3.1"
 kover = "0.7.5"
 sonar = "5.1.0.4882"
-baselineprofile = "1.3.3"
+baselineprofile = "1.3.4"
 timber = "5.0.1"
 treessence = "1.1.2"
-rqesUiSDK = "0.1.4"
+rqesUiSDK = "0.2.0.9-SNAPSHOT"
 realm = "2.3.0"
 
 [libraries]
