--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,7 +55,7 @@ slf4j = "2.0.7"
 gson = "2.11.0"
 googlePhoneNumber = "8.13.40"
 zxing = "3.5.3"
-eudiWalletCore = "0.16.0-SNAPSHOT"
+eudiWalletCore = "0.16.0"
 cameraCore = "1.4.2"
 owaspDependencyCheck = "12.1.0"
 material3 = "1.3.2"
