--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -54,7 +54,7 @@ slf4j = "2.0.17"
 gson = "2.13.1"
 googlePhoneNumber = "9.0.8"
 zxing = "3.5.3"
-eudiWalletCore = "0.17.0"
+eudiWalletCore = "0.18.0-SNAPSHOT"
 cameraCore = "1.4.2"
 owaspDependencyCheck = "12.1.3"
 material3 = "1.3.2"
